# historical-septa

./: .env.example  .gitignore  Cargo.toml  README.md  create_migration.sh  drop.sql  dump_dev_db.sh  fetch_trainview.sh  get_traincars_per_day.js
migrations/: 1756382274_initial-migration.sql  1760028280_merge-times-to-records.sql  1760117374_update-file-contents-to-nullable.sql
migrator/: Cargo.toml
migrator/src/: main.rs
responses/: 1756216225.json  1756216240.json  1756216244.json  1756216250.json  1756216401.json  1756227520.json
scripts/: deploy.sh  dump.sh  migrate.sh  restore_dump.sh
src/: db.rs  main.rs  serde_utils.rs  testing.rs  tracking.rs
src/db/: mod.rs  tracking.rs
src/septa/: api.rs  content.rs  mod.rs  processing.rs  query_builder.rs  train_view.rs
src/web/: mod.rs
